--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.13.9",
     "@types/stripe": "^8.0.417",
     "axios": "^1.9.0",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.0",
     "pg": "^8.11.3",
     "prisma": "^6.6.0",
